[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/ffi", "crates/httpd"]
default-members = ["crates/core"]

[workspace.dependencies]
yxy = { path = "crates/core" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
