[package]
name = "yxy-abi"
version = "0.2.0-alpha"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "C-style yxy bindings"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ffi-destruct = "0.1"

[dependencies.yxy]
path = "../core"
version = "0.7.0-alpha"

[features]
# default = ["blocking"]
blocking = ["yxy/blocking"]
