[package]
name = "yxy-cli"
version = "0.3.0-alpha"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "Command Line Interface for YXY"
keywords = ["yxy", "YSchool", "CLI"]
categories = ["command-line-utilities"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/cli"
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }

[dependencies.yxy]
path = "../core"
version = "0.5"
