[package]
name = "yxy-cli"
version = "0.3.0-alpha"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "Command Line Interface for YXY"
keywords = ["yxy", "CLI"]
categories = ["command-line-utilities"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/cli"
readme = "README.md"
publish = false

[dependencies]
yxy.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[target.'cfg(not(target_env = "musl"))'.dependencies.reqwest]
workspace = true
default-features = true

[target.'cfg(target_env = "musl")'.dependencies.reqwest]
workspace = true
features = ["rustls-tls"]
