[package]
name = "yxy"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "YXY(YSchool) platform API binding"
keywords = ["yxy", "YSchool", "API"]
categories = ["api-bindings"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/core"
readme = "README.md"
publish = false

[dependencies]
bytes = "1.2"
rsa = "0.7"
rand = "0.8"
base64 = "0.13"
md5 = "0.7"
aes = "0.8"
serde = "1.0"
serde_json = "1.0"
const_format = "0.2"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_yaml = "0.9"
once_cell = "1.16"

[dependencies.reqwest]
features = ["json", "cookies"]
version = "0.11"

[dependencies.uuid]
version = "1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
blocking = ["reqwest/blocking"]
