[package]
name = "yxy"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "YXY(yiSchool) platform API binding"
keywords = ["yxy", "yiSchool", "API"]
categories = ["api-bindings"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/core"
readme = "README.md"
publish = false

[dependencies]
aes = "0.8"
base64 = "0.21"
bytes = "1.2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
const_format = "0.2"
md5 = "0.7"
rand = "0.8"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
once_cell = "1.16"
serde_yaml = "0.9"
tokio = { version = "1.33", features = ["full"] }

[dependencies.reqwest]
features = ["json", "cookies"]
version = "0.11"

[dependencies.uuid]
version = "1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
blocking = ["reqwest/blocking"]
