[package]
name = "yxy"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "YXY(yiSchool) platform API binding"
keywords = ["yxy", "yiSchool", "API"]
categories = ["api-bindings"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/core"
readme = "README.md"
publish = false

[dependencies]
aes = "0.8"
base64 = "0.22"
bytes = "1.2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
const_format = "0.2"
md5 = "0.7"
rand = "0.8"
rsa = "0.9"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"

[dev-dependencies]
tokio.workspace = true
once_cell = "1.16"
serde_yaml.workspace = true

[target.'cfg(not(target_env = "musl"))'.dependencies.reqwest]
workspace = true
features = ["cookies"]
default-features = true

[target.'cfg(target_env = "musl")'.dependencies.reqwest]
workspace = true
features = ["cookies", "rustls-tls"]

[dependencies.uuid]
version = "1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
blocking = ["reqwest/blocking"]
