[package]
name = "yxy-ffi"
version = "0.2.0-alpha"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "C-style yxy bindings"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
yxy.workspace = true
ffi-destruct = "0.1"

[features]
# default = ["blocking"]
blocking = ["yxy/blocking"]
