[package]
name = "yxy-httpd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "HTTPd for YXY"
categories = ["web-programming::http-server"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/httpd"
readme = "README.md"
publish = false

[dependencies.yxy]
path = "../core"
version = "0.4"

[dependencies.axum]
version = "0.5"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
