[package]
name = "yxy-httpd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "HTTPd for YXY"
categories = ["web-programming::http-server"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/httpd"
readme = "README.md"
publish = false

[dependencies]
axum = "0.6"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.yxy]
path = "../core"
version = "0.7.0"
