[package]
name = "yxy-httpd"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["DumpTime"]
description = "HTTPd for YXY"
categories = ["web-programming::http-server"]
homepage = "https://github.com/DumpTime/yxy"
repository = "https://github.com/DumpTime/yxy/tree/dev/crates/httpd"
readme = "README.md"
publish = false

[dependencies]
yxy.workspace = true
tokio.workspace = true
axum = "0.7"
clap.workspace = true
serde.workspace = true
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
